; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/kernel32/winnls/string/extr_format_msg.c_search_message.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/kernel32/winnls/string/extr_format_msg.c_search_message.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@FORMAT_MESSAGE_FROM_HMODULE = common dso_local global i32 0, align 4
@FORMAT_MESSAGE_FROM_SYSTEM = common dso_local global i32 0, align 4
@SEVERITY_ERROR = common dso_local global i64 0, align 8
@FACILITY_WIN32 = common dso_local global i64 0, align 8
@kernel32_handle = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32, i32, i32, i32)* @search_message to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @search_message(i32 %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  store i32* null, i32** %9, align 8
  %10 = load i32, i32* %5, align 4
  %11 = load i32, i32* @FORMAT_MESSAGE_FROM_HMODULE, align 4
  %12 = and i32 %10, %11
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %14, label %19

14:                                               ; preds = %4
  %15 = load i32, i32* %6, align 4
  %16 = load i32, i32* %7, align 4
  %17 = load i32, i32* %8, align 4
  %18 = call i32* @load_message(i32 %15, i32 %16, i32 %17)
  store i32* %18, i32** %9, align 8
  br label %19

19:                                               ; preds = %14, %4
  %20 = load i32*, i32** %9, align 8
  %21 = icmp ne i32* %20, null
  br i1 %21, label %45, label %22

22:                                               ; preds = %19
  %23 = load i32, i32* %5, align 4
  %24 = load i32, i32* @FORMAT_MESSAGE_FROM_SYSTEM, align 4
  %25 = and i32 %23, %24
  %26 = icmp ne i32 %25, 0
  br i1 %26, label %27, label %45

27:                                               ; preds = %22
  %28 = load i32, i32* %7, align 4
  %29 = call i64 @HRESULT_SEVERITY(i32 %28)
  %30 = load i64, i64* @SEVERITY_ERROR, align 8
  %31 = icmp eq i64 %29, %30
  br i1 %31, label %32, label %40

32:                                               ; preds = %27
  %33 = load i32, i32* %7, align 4
  %34 = call i64 @HRESULT_FACILITY(i32 %33)
  %35 = load i64, i64* @FACILITY_WIN32, align 8
  %36 = icmp eq i64 %34, %35
  br i1 %36, label %37, label %40

37:                                               ; preds = %32
  %38 = load i32, i32* %7, align 4
  %39 = call i32 @HRESULT_CODE(i32 %38)
  store i32 %39, i32* %7, align 4
  br label %40

40:                                               ; preds = %37, %32, %27
  %41 = load i32, i32* @kernel32_handle, align 4
  %42 = load i32, i32* %7, align 4
  %43 = load i32, i32* %8, align 4
  %44 = call i32* @load_message(i32 %41, i32 %42, i32 %43)
  store i32* %44, i32** %9, align 8
  br label %45

45:                                               ; preds = %40, %22, %19
  %46 = load i32*, i32** %9, align 8
  ret i32* %46
}

declare dso_local i32* @load_message(i32, i32, i32) #1

declare dso_local i64 @HRESULT_SEVERITY(i32) #1

declare dso_local i64 @HRESULT_FACILITY(i32) #1

declare dso_local i32 @HRESULT_CODE(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
